# prompter

./: CMakeLists.txt  common.cmake
Prompter/: CMakeLists.txt  main.cpp
Prompter/gui/: MainWindow.ui  gui.cmake
Prompter/gui/panes/: PanePrompt.cpp  PanePrompt.h  PanePrompt.ui  PanePromptSelfAssess.cpp  PanePromptSelfAssess.h  PanePromptSelfAssess.ui  PanePromptVideo.cpp  PanePromptVideo.h  PanePromptVideo.ui  PaneSettings.cpp  PaneSettings.h  PaneSettings.ui  panes.cmake
PrompterLib/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  PromptEngineer.cpp  PromptEngineer.h  PrompterLib.cpp  PrompterLib.h  SelfAssessEngineer.cpp  SelfAssessEngineer.h
PrompterTests/: CMakeLists.txt  test_cli.cpp  test_config_manager.cpp  test_prompter.cpp
